# ctxclip

./: README.md  package.json  pyproject.toml  requirements.txt
ctxclip/: __init__.py  expand.py  graph.py  interface.py  main.py  snapshot.py  vscode_plugin.py
ctxclip/interface/: __init__.py  interface.py  patch.py  tree.py
ctxclip/snapshot/: __init__.py  debugger.py  inject.py
docs/: ctxclip.json  style.css
graphview/: index.html  script.js
tests/: conftest.py  current_fixture.py  test_ctxclip.py  test_graph.py  test_interface.py  test_patch.py  test_snapshot.py  updated_fixture.py
