[project]
name = "ctxclip"
description = "experimental python code context clipping"
version = "0.0.1"
dependencies = [
    "rst2gfm >= 0.1.0",
]

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools', 'wheel'
]

[project.scripts]
ctxclip = "ctxclip:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ctxclip"]
